fix animation jump as much as possible and mobile layout

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-50%);
+    transform: translateX(var(--translate-percent));
   }
 }
 
